@@ -8,8 +8,8 @@ Package: schooltool
 Section: misc
 Architecture: all
 Depends: ${python:Depends}, python2.3-pyopenssl, python2.3-xml, python2.3-twisted (>= 1.3.0), libxml2-python2.3 (>= 2.6.3-1), python2.3-imaging, ssl-cert, openssl, libschooltool (= ${Source-Version}), ${misc:Depends}
-Conflicts: schoolbell, schooltool-server
-Replaces: schoolbell, schooltool-server
+Conflicts: schoolbell
+Replaces: schoolbell
 Recommends: python-tcpwrap (>= 0.2)
 Description: common platform for school administration
  SchoolTool is a project to develop a common global school administration
@@ -43,13 +43,14 @@ Description: web server for co-ordinating schedules, timetables and calendars
 Package: schooltool-clients
 Section: misc
 Architecture: all
-Depends: ${python:Depends}, python2.3-xml, libxml2-python2.3 (>= 2.6.3-1), libwxgtk2.4-python (>= 2.4.2.4), libschooltool-clients (= ${Source-Version}), ${misc:Depends}
-Description: clients for the Schooltool common platform for school administration
+Depends: ${python:Depends}, python2.3-xml, libxml2-python2.3 (>= 2.6.3-1), libschooltool-clients (= ${Source-Version}), ${misc:Depends}
+Description: clients for the SchoolTool common platform for school administration
  SchoolTool is a project to develop a common global school administration
  infrastructure that is freely available under an Open Source licence.
  .
  This package contains the the architecture independent parts of the
- SchoolTool clients (GUI and command line).
+ SchoolTool clients for the RESTive interface (command line client and
+ import-sampleschool).
  .
  Homepage: http://www.schooltool.org/
 
@@ -75,6 +76,7 @@ Description: architecture dependent files for the SchoolTool clients
  infrastructure that is freely available under an Open Source licence.
  .
  This package contains the the architecture dependent parts of the
- SchoolTool clients for the RESTive interface (GUI and command line).
+ SchoolTool clients for the RESTive interface (command line client and
+ import-sampleschool).
  .
  Homepage: http://www.schooltool.org
