@@ -8,5 +8,4 @@ import sys
 
 datadir = '/usr/share/schooltool-clients/sampleschool'
 sys.path.insert(0, '/usr/lib/schooltool-clients')
-sys.path.insert(0, '/usr/share/schooltool-clients')
 
