@@ -5,7 +5,6 @@ A script to start the schooltool client in a Debian system.
 
 import sys
 sys.path.insert(0, '/usr/lib/schooltool-clients')
-sys.path.insert(0, '/usr/share/schooltool-clients')
 
 import schooltool.clients.client
 schooltool.clients.client.main()
