@@ -1,10 +1,0 @@
-.TH wxschooltool 1
-.SH NAME
-wxschooltool \- starts the SchoolTool wxWindows client
-.SH SYNOPSIS
-.B wxschooltool
-.SH DESCRIPTION
-.B wxschooltool
-is the wxWidgets-based graphical SchoolTool client.
-.SH "SEE ALSO"
-schooltool-server(1), schooltool-client(1), import-sampledata(1).
